Posting to the api now from UI.

--- a/apps/six-handed-ng/src/app/app.component.html
+++ b/apps/six-handed-ng/src/app/app.component.html
@@ -3,5 +3,6 @@
     <h1>Welcome to {{ title }}!</h1>
 </header>
 <main>
+    <div>Menu goes here</div>
     <router-outlet></router-outlet>
 </main>
