Sockets are working! recieving from front to back!

--- a/apps/six-handed-ng/src/app/games-dashboard/games-dashboard.component.html
+++ b/apps/six-handed-ng/src/app/games-dashboard/games-dashboard.component.html
@@ -1,1 +1,6 @@
 <p>games-dashboard works!</p>
+<a (click)="sendMessage('hello world')">SEND MESSAGE</a>
+
+<ul>
+    <li *ngFor="let message of messages">{{ message }}</li>
+</ul>
