Trying to create the rooms dynamically.

--- a/apps/six-handed-ng/src/app/games-dashboard/games-dashboard.component.html
+++ b/apps/six-handed-ng/src/app/games-dashboard/games-dashboard.component.html
@@ -5,3 +5,5 @@
 <ul>
     <li *ngFor="let message of messages">{{ message }}</li>
 </ul>
+
+<p><a href="#" (click)="createRoom('room1', $event)">Create Room</a></p>
