Adding form to the game name.

--- a/apps/six-handed-ng/src/app/games-dashboard/games-dashboard.component.html
+++ b/apps/six-handed-ng/src/app/games-dashboard/games-dashboard.component.html
@@ -7,4 +7,9 @@
     </li>
 </ul>
 
-<p><a href="#" (click)="createRoom('roomName', $event)">Create Room</a></p>
+<form [formGroup]="createRoomForm" (ngSubmit)="createGame()">
+    <label for="gameName">Game Name</label>
+    <input type="text" formControlName="gameName" required />
+
+    <button>Create Game</button>
+</form>
