--- a/apps/six-handed-ng/src/app/games-dashboard/games-dashboard.component.html
+++ b/apps/six-handed-ng/src/app/games-dashboard/games-dashboard.component.html
@@ -3,7 +3,7 @@
 
 <ul>
     <li *ngFor="let room of rooms">
-        <a href="#" routerLink="/games/{{ room.id }}">{{ room.name }}</a>
+        <a href="#" routerLink="/games/{{ room }}">{{ room }}</a>
     </li>
 </ul>
 
