--- a/apps/six-handed-ng/src/app/game/game.component.html
+++ b/apps/six-handed-ng/src/app/game/game.component.html
@@ -3,4 +3,15 @@
 <ul>
     <li *ngFor="let player of players">{{ player }}</li>
 </ul>
-<a routerLink="/games-dashboard">Back to games dashboard</a>
+
+<div class="seats">
+    <p *ngFor="let seat of gameData.seats">
+        <ng-container *ngIf="seat.userId"> Seat {{ seat.seatNumber }} - {{ seat.userId }} </ng-container>
+        <ng-container *ngIf="!seat.userId">
+            <a href="#" (click)="takeSeat($event, seat.seatNumber)"> Join Seat {{ seat.seatNumber }} </a>
+        </ng-container>
+    </p>
+</div>
+
+<p><a href="#" (click)="startGame($event)">Start Game</a></p>
+<p><a routerLink="/games-dashboard">Back to games dashboard</a></p>
