Renamed games-dashboard to just games.

--- a/apps/six-handed-ng/src/app/game/game.component.html
+++ b/apps/six-handed-ng/src/app/game/game.component.html
@@ -14,4 +14,4 @@
 </div>
 
 <p *ngIf="gameData.startGame"><a href="#" (click)="startGame($event)">Start Game</a></p>
-<p><a routerLink="/games-dashboard">Back to games dashboard</a></p>
+<p><a routerLink="/games">Back to games dashboard</a></p>
