--- a/apps/six-handed-ng/src/app/app.component.html
+++ b/apps/six-handed-ng/src/app/app.component.html
@@ -1,8 +1,6 @@
-<header class="flex">
-    <img alt="Nx logo" width="75" src="https://nx.dev/assets/images/nx-logo-white.svg" />
-    <h1>Welcome to {{ title }}!</h1>
+<header class="header">
+    <six-handed-euchre-menu></six-handed-euchre-menu>
 </header>
 <main>
-    <div>Menu goes here</div>
     <router-outlet></router-outlet>
 </main>
