Adding basic designs to the pages.

--- a/apps/six-handed-ng/src/app/app.component.html
+++ b/apps/six-handed-ng/src/app/app.component.html
@@ -1,6 +1,3 @@
-<header class="header">
-    <six-handed-euchre-menu></six-handed-euchre-menu>
-</header>
-<main>
-    <router-outlet></router-outlet>
-</main>
+<ion-app>
+    <ion-router-outlet></ion-router-outlet>
+</ion-app>
