--- a/apps/six-handed-ng/src/app/games/games.component.html
+++ b/apps/six-handed-ng/src/app/games/games.component.html
@@ -1,15 +1,36 @@
-<p>games-dashboard works!</p>
-<p><a (click)="sendMessage('hello world')">SEND MESSAGE</a></p>
+<ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-toggle>
+                <ion-button>
+                    <ion-icon slot="icon-only" name="menu"></ion-icon>
+                </ion-button>
+            </ion-menu-toggle>
+        </ion-buttons>
+        <ion-title>Six Handed Euchre - Games</ion-title>
+    </ion-toolbar>
+</ion-header>
+<ion-content class="ion-padding">
+    <ion-card>
+        <ion-card-header>
+            <ion-card-subtitle>Login or Signup</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+            <h2>Games List</h2>
+            <ul>
+                <li *ngFor="let room of rooms">
+                    <a href="#" routerLink="/games/{{ room }}">{{ room }}</a>
+                </li>
+            </ul>
 
-<ul>
-    <li *ngFor="let room of rooms">
-        <a href="#" routerLink="/games/{{ room }}">{{ room }}</a>
-    </li>
-</ul>
+            <form [formGroup]="createRoomForm" (ngSubmit)="createGame()">
+                <ion-item>
+                    <ion-label for="gameName" position="floating" color="primary">Game Name</ion-label>
+                    <ion-input type="text" formControlName="gameName" required></ion-input>
+                </ion-item>
 
-<form [formGroup]="createRoomForm" (ngSubmit)="createGame()">
-    <label for="gameName">Game Name</label>
-    <input type="text" formControlName="gameName" required />
-
-    <button>Create Game</button>
-</form>
+                <ion-button type="submit" color="primary">Create Game</ion-button>
+            </form>
+        </ion-card-content>
+    </ion-card>
+</ion-content>
