--- a/apps/six-handed-ng/src/app/sign-up/sign-up.component.html
+++ b/apps/six-handed-ng/src/app/sign-up/sign-up.component.html
@@ -1,11 +1,43 @@
-<form [formGroup]="signUpForm" (ngSubmit)="signUp(signUpForm, $event)">
-    <label for="firstName">First Name</label>
-    <input type="text" formControlName="firstName" required />
-    <label for="lastName">Last Name</label>
-    <input type="text" formControlName="lastName" required />
-    <label for="email">Email</label>
-    <input type="email" formControlName="email" required />
-    <label for="password">Password</label>
-    <input type="password" formControlName="password" required />
-    <button>Submit</button>
-</form>
+<ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-toggle>
+                <ion-button>
+                    <ion-icon slot="icon-only" name="menu"></ion-icon>
+                </ion-button>
+            </ion-menu-toggle>
+        </ion-buttons>
+        <ion-title>Six Handed Euchre - Sign Up</ion-title>
+    </ion-toolbar>
+</ion-header>
+<ion-content class="ion-padding">
+    <ion-card>
+        <ion-card-header>
+            <ion-card-subtitle>Login or Signup</ion-card-subtitle>
+        </ion-card-header>
+
+        <ion-card-content>
+            <form [formGroup]="signUpForm" (ngSubmit)="signUp(signUpForm, $event)">
+                <ion-item>
+                    <ion-label for="firstName" position="floating" color="primary">First Name</ion-label>
+                    <ion-input type="text" formControlName="firstName" required></ion-input>
+                </ion-item>
+                <ion-item>
+                    <ion-label for="lastName" position="floating" color="primary">Last Name</ion-label>
+                    <ion-input type="text" formControlName="lastName" required></ion-input>
+                </ion-item>
+                <ion-item>
+                    <ion-label for="email" position="floating" color="primary">Email</ion-label>
+                    <ion-input type="email" formControlName="email" required></ion-input>
+                </ion-item>
+                <ion-item>
+                    <ion-label for="password" position="floating" color="primary">Password</ion-label>
+                    <ion-input type="password" formControlName="password" required></ion-input>
+                </ion-item>
+
+                <ion-button type="submit" color="primary">Sign Up</ion-button>
+                <ion-button routerLink="/login" fill="outline" color="secondary">Login</ion-button>
+            </form>
+        </ion-card-content>
+    </ion-card>
+</ion-content>
