--- a/apps/six-handed-ng/src/app/games/games.component.html
+++ b/apps/six-handed-ng/src/app/games/games.component.html
@@ -1,13 +1,11 @@
 <ion-header>
     <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-menu-toggle>
-                <ion-button>
-                    <ion-icon slot="icon-only" name="menu"></ion-icon>
-                </ion-button>
-            </ion-menu-toggle>
-        </ion-buttons>
         <ion-title>Six Handed Euchre - Games</ion-title>
+        <ion-buttons slot="end">
+            <ion-button routerLink="/login">
+                Logout
+            </ion-button>
+        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
