--- a/apps/six-handed-ng/src/app/games/games.component.html
+++ b/apps/six-handed-ng/src/app/games/games.component.html
@@ -11,13 +11,13 @@
 <ion-content class="ion-padding">
     <ion-card>
         <ion-card-header>
-            <ion-card-subtitle>Login or Signup</ion-card-subtitle>
+            <ion-card-title>Join a game or create a new one!</ion-card-title>
         </ion-card-header>
         <ion-card-content>
             <h2>Games List</h2>
             <ul>
-                <li *ngFor="let room of rooms">
-                    <a href="#" routerLink="/games/{{ room }}">{{ room }}</a>
+                <li *ngFor="let game of games">
+                    <a href="#" routerLink="/games/{{ game.gameId }}">{{ game.gameName }}</a>
                 </li>
             </ul>
 
