Building a deck and sending to users on game start.  Alternating turn controls working.

--- a/apps/six-handed-ng/src/app/game/game.component.scss
+++ b/apps/six-handed-ng/src/app/game/game.component.scss
@@ -10,4 +10,9 @@
             border-right: 1px solid gray;
         }
     }
+
+    .seat--player-info {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
