--- a/apps/six-handed-ng/src/app/game/game.component.html
+++ b/apps/six-handed-ng/src/app/game/game.component.html
@@ -29,17 +29,34 @@
                             Join Seat {{ seat.seatNumber }}
                         </ion-button>
                     </ng-container>
-                    <ng-container *ngIf="seat.userName">
-                        <p>Player: {{ seat.userName }}</p>
-                        <ion-button
-                            *ngIf="seat.userName === currentUser.name"
-                            fill="outline"
-                            type="primary"
-                            (click)="leaveSeat()"
-                        >
-                            Leave Seat {{ seat.seatNumber }}
-                        </ion-button>
-                    </ng-container>
+                    <div class="seat--player-info" *ngIf="seat.userName">
+                        <div class="seat--player-info--name">
+                            <p>Player: {{ seat.userName }}</p>
+                        </div>
+                        <div class="seat--player-info--leave">
+                            <ion-button
+                                *ngIf="seat.userName === currentUser.name"
+                                fill="outline"
+                                type="primary"
+                                (click)="leaveSeat()"
+                            >
+                                Leave Seat {{ seat.seatNumber }}
+                            </ion-button>
+                        </div>
+                    </div>
+                    <!-- <div class="player-hand" *ngIf="gameData?.hasGameStarted && seat?.hand">
+                        <div class="player-hand--cards" *ngFor="let card of seat?.hand">
+                            {{ card.cardValue }} - {{ card.suit }}
+                        </div>
+                    </div> -->
+                    <ion-button
+                        *ngIf="gameData?.hasGameStarted && seat.isYourTurn"
+                        fill="outline"
+                        type="primary"
+                        (click)="takeYourTurn($event, seat.seatNumber)"
+                    >
+                        Take Your Turn
+                    </ion-button>
                 </div>
             </div>
             <ion-button
